<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
	<modelVersion>4.0.0</modelVersion>
	<groupId>com.ctl.it.qa</groupId>
	<artifactId>EshopTools</artifactId>
	<version>2.0.0-SNAPSHOT</version>
	<packaging>jar</packaging>

	<name>TST_EshopTools</name>
	<url>http://maven.apache.org</url>

	<properties>
		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
	</properties>

	<distributionManagement>
	</distributionManagement>

	<repositories>
		<repository>
			<id>nexus_test</id>
			<name>Nexus Repository for QA</name>
			<url>http://lxomavmpc110.qintra.com:8081/nexus/content/repositories/test/</url>
		</repository>
		<repository>
			<id>ext-release-local</id>
			<url>http://splunk.artifactoryonline.com/splunk/ext-releases-local</url>
		</repository>
	</repositories>

	<dependencies>

		<dependency>
			<groupId>com.ctl.it.qa</groupId>
			<artifactId>staf</artifactId>
			<version>3.0.0</version>
		</dependency>
		
		<dependency>
       <groupId>org.mongodb</groupId>
       <artifactId>mongo-java-driver</artifactId>
       <version>3.3.0</version>
       </dependency>
       
     	
	<!--  <dependency>
		<groupId>com.ctl.it.qa</groupId>
		<artifactId>CompleteOrder</artifactId>
		<version>1.0.0</version>
        <scope>compile</scope>
	</dependency>-->
	
	<!--If Running the Scripts on Local Machine Uncomment the Below Dependency - CompleteOrder -->

    
 	<dependency>
         <groupId>com.ctl.it.qa</groupId>
         <artifactId>CompleteOrder</artifactId>
         <version>1.0.0</version>
         <scope>system</scope>
          <systemPath>${project.basedir}/src/test/resources/CompleteOrder.jar</systemPath>
   </dependency> 


<!-- DOM Parser XML Modification dependencies -->
        <dependency>
              <groupId>javax.xml.parsers</groupId>
              <artifactId>jaxp-api</artifactId>
              <version>1.4.5</version>
              </dependency>

<dependency>
    <groupId>org.apache.httpcomponents</groupId>
    <artifactId>httpclient</artifactId>
    <version>4.5.9</version>
</dependency>

	</dependencies>

	<build>
		<plugins>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-compiler-plugin</artifactId>
				<version>3.2</version>
				<configuration>
					<source>1.8</source>
					<target>1.8</target>
					<!-- <warSourceExcludes> WEB-INF/lib/esec.jar, WEB-INF/lib/log4j.jar 
						</warSourceExcludes> -->
					<!-- <excludes> <exclude>${project.basedir}/src/test/resources/*.jar</exclude> 
						</excludes> -->
				</configuration>
			</plugin>
 
			<plugin>
				<groupId>org.jacoco</groupId>
				<artifactId>jacoco-maven-plugin</artifactId>
				<version>0.7.7.201606060606</version>
				<executions>
					<execution>
						<goals>
							<goal>prepare-agent</goal>
						</goals>
					</execution>
					<execution>
						<id>report</id>
						<phase>prepare-package</phase>
						<goals>
							<goal>report</goal>
						</goals>
					</execution>
				</executions>
			</plugin> 
		</plugins>

		<resources>
			<resource>
				<directory>src/test/resources</directory>
				<includes>
					<include>EShopLogin.xml</include>
				</includes>
			</resource>
		</resources>
	</build>
</project>
